/*
 * catalog_schema_data.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2021-2024 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.apple.foundationdb.relational.api.generated;

option java_package = "com.apple.foundationdb.relational.api.generated";
option java_outer_classname = "CatalogData";

import "record_metadata.proto";
import "record_metadata_options.proto";
import "google/protobuf/descriptor.proto";

message Schema {
  string schema_name = 1; // a logical schema name
  string database_id = 2;
  string schema_template_name = 3;
  int32 schema_version = 4;
  repeated Table tables = 5;
  bytes record = 6; // serialized FileDescriptorProto of the proto that defines the schema
}

message Table {
  string name = 1;
  bytes primary_key = 2;
  repeated Index indexes = 3;
}

message Index {
  string name = 1;
  bytes indexDef = 2;
}

message DatabaseInfo {
  string database_id = 1;
  string other = 2;
}

message UnionDescriptor {
  option (com.apple.foundationdb.record.record).usage = UNION;
  Schema _Schema = 1;
  DatabaseInfo _DatabaseInfo = 2;
}
